setup & requirements added

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ab5e8e7f",
+   "id": "ac4ba829",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,83 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "058fde0c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'c:\\\\Users\\\\quamr\\\\OneDrive\\\\Desktop\\\\project\\\\spotifyRecommendation\\\\research'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "92862c72",
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir('c:\\\\Users\\\\quamr\\\\OneDrive\\\\Desktop\\\\project\\\\spotifyRecommendation')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "9468d40d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'c:\\\\Users\\\\quamr\\\\OneDrive\\\\Desktop\\\\project\\\\spotifyRecommendation'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%pwd"
+    "import pandas as pd8"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cfe34fa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5cb7fb12",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f5af572",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7407c940",
+   "id": "ddf5f40f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -103,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d418f88d",
+   "id": "a54ef4db",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -111,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cae9fb33",
+   "id": "2b9a0c4e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -119,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9798e1d9",
+   "id": "dae3422d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -127,7 +62,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ac8cbd8",
+   "id": "c18e8932",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf2d173c",
    "metadata": {},
    "outputs": [],
    "source": []
